--- a/Cindeck/Views/UnitView.xaml
+++ b/Cindeck/Views/UnitView.xaml
@@ -111,7 +111,7 @@
 
             <DockPanel LastChildFill="True">
                 <c:IdolFilterPanel Margin="0,5,0,0" DockPanel.Dock="Top" DataContext="{Binding Filter}"/>
-                <c:SelectedItemBindableDataGrid x:Name="IdolGrid" ItemsSource="{Binding Path=Idols}" DockPanel.Dock="Top" SelectionMode="Single" SelectedItem="{Binding SelectedIdol, Mode=TwoWay}" AutoGenerateColumns="False" HorizontalAlignment="Stretch" Grid.Row="1" Margin="0,5,0,0">
+                <c:SelectedItemBindableDataGrid x:Name="IdolGrid" ItemsSource="{Binding Path=Idols, IsAsync=True}" DockPanel.Dock="Top" SelectionMode="Single" SelectedItem="{Binding SelectedIdol, Mode=TwoWay}" AutoGenerateColumns="False" HorizontalAlignment="Stretch" Grid.Row="1" Margin="0,5,0,0">
                     <DataGrid.RowStyle>
                         <Style TargetType="DataGridRow">
                             <Setter Property="Background" Value="{Binding Category, Converter={StaticResource IdolTypeToColorConverter}}"/>
