--- a/Cindeck/Controls/IdolFilterPanel.xaml
+++ b/Cindeck/Controls/IdolFilterPanel.xaml
@@ -14,31 +14,31 @@
         </ResourceDictionary>
     </UserControl.Resources>
     <WrapPanel DockPanel.Dock="Left" Orientation="Horizontal">
-        <StackPanel Orientation="Horizontal">
+        <StackPanel Orientation="Horizontal" Visibility="{Binding EnableCategoryFilter, Converter={StaticResource BooleanToVisibilityConverter}}">
             <Label Content="タイプ"/>
             <ComboBox  Width="100" ItemsSource="{Binding IdolTypes}" DisplayMemberPath="Item2" SelectedValuePath="Item1" SelectedValue="{Binding TypeFilter, Mode=TwoWay}"/>
         </StackPanel>
 
-        <StackPanel Orientation="Horizontal">
+        <StackPanel Orientation="Horizontal" Visibility="{Binding EnableRarityFilter, Converter={StaticResource BooleanToVisibilityConverter}}">
             <Label Content="レア度"/>
             <ComboBox  Width="100" ItemsSource="{Binding Rarities}" DisplayMemberPath="Item2" SelectedValuePath="Item1" SelectedValue="{Binding RarityFilter, Mode=TwoWay}"/>
         </StackPanel>
 
-        <StackPanel Orientation="Horizontal">
+        <StackPanel Orientation="Horizontal" Visibility="{Binding EnableSkillFilter, Converter={StaticResource BooleanToVisibilityConverter}}">
             <Label Content="スキル"/>
             <ComboBox  Width="150" ItemsSource="{Binding Skills}" DisplayMemberPath="Item2" SelectedValuePath="Item1" SelectedValue="{Binding SkillFilter, Mode=TwoWay}"/>
         </StackPanel>
 
-        <StackPanel Orientation="Horizontal">
+        <StackPanel Orientation="Horizontal" Visibility="{Binding EnableCenterEffectFilter, Converter={StaticResource BooleanToVisibilityConverter}}">
             <Label Content="センター効果"/>
             <ComboBox  Width="150" ItemsSource="{Binding CenterEffects}" DisplayMemberPath="Item2" SelectedValuePath="Item1" SelectedValue="{Binding CenterEffectFilter, Mode=TwoWay}"/>
         </StackPanel>
 
-        <StackPanel Orientation="Horizontal">
+        <StackPanel Orientation="Horizontal" Visibility="{Binding EnableNameFilter, Converter={StaticResource BooleanToVisibilityConverter}}">
             <Label Content="名前"/>
             <TextBox Width="150" Text="{Binding NameFilter, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
         </StackPanel>
 
-        <CheckBox Visibility="{Binding AllowFilterOwned, Converter={StaticResource BooleanToVisibilityConverter}}" Margin="5,0,0,0" VerticalAlignment="Center" IsChecked="{Binding FilterOwned, Mode=TwoWay}"  Content="所有済みのアイドルを表示しない"/>
+        <CheckBox Visibility="{Binding EnableOwnedFilter, Converter={StaticResource BooleanToVisibilityConverter}}" Margin="5,0,0,0" VerticalAlignment="Center" IsChecked="{Binding FilterOwned, Mode=TwoWay}"  Content="所有済みのアイドルを表示しない"/>
     </WrapPanel>
 </UserControl>
