--- a/Cindeck/Resources.xaml
+++ b/Cindeck/Resources.xaml
@@ -63,4 +63,18 @@
         <sys:Int32>10</sys:Int32>
     </x:Array>
 
+    <x:Array Type="sys:Int32" x:Key="PotentialLevels">
+        <sys:Int32>0</sys:Int32>
+        <sys:Int32>1</sys:Int32>
+        <sys:Int32>2</sys:Int32>
+        <sys:Int32>3</sys:Int32>
+        <sys:Int32>4</sys:Int32>
+        <sys:Int32>5</sys:Int32>
+        <sys:Int32>6</sys:Int32>
+        <sys:Int32>7</sys:Int32>
+        <sys:Int32>8</sys:Int32>
+        <sys:Int32>9</sys:Int32>
+        <sys:Int32>10</sys:Int32>
+    </x:Array>
+
 </ResourceDictionary>
