--- a/Cindeck/Views/PotentialView.xaml
+++ b/Cindeck/Views/PotentialView.xaml
@@ -15,7 +15,7 @@
     </UserControl.Resources>
     <DockPanel LastChildFill="True">
         <c:IdolFilterPanel Margin="0,5,0,5" DockPanel.Dock="Top" DataContext="{Binding Filter}"/>
-        <c:SelectedItemBindableDataGrid ItemsSource="{Binding Path=PotentialData, IsAsync=True}" AutoGenerateColumns="False" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Row="0">
+        <c:SelectedItemBindableDataGrid ItemsSource="{Binding Path=PotentialData, IsAsync=True}" CanUserAddRows="False" AutoGenerateColumns="False" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
             <DataGrid.RowStyle>
                 <Style TargetType="DataGridRow">
                     <Setter Property="Background" Value="{Binding Category, Converter={StaticResource IdolTypeToColorConverter}}"/>
